examples/nginx-gateway-fabric/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: rollouts-demo-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - protocol: HTTP
      name: web
      port: 80
